--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
+    "openai": "^3.1.0",
     "serverless-http": "^3.1.1"
   }
 }
